--- a/source/_posts/函数的防抖与截流.md
+++ b/source/_posts/函数的防抖与截流.md
@@ -2,5 +2,78 @@
 title: 函数的防抖与截流
 thumbnail: http://rr2u16sq3.bkt.clouddn.com/20ab6cb5cef84475ad912705b3d5da51.webp
 date: 2023-03-06 22:48:46
-tags:
+tags: [Javascript]
+categories: [前端]
 ---
+防抖函数: 只执行一次传入的函数(类似于弹簧,只在结束或者开头的时候执行一次)
+
+```javascript
+/* 防抖函数
+fn:需要执行防抖的函数
+immediate: 是否立即执行传入的函数
+*/
+function debounce(fn, delay = 300, immediate = false) {
+  let timer,res;
+  let myDebounce = function (...args) {
+    if (timer) {
+      clearTimeout(timer)
+    }
+    if (immediate) {
+      if (!timer) {
+        res = fn.apply(this, args)
+      }
+      timer = setTimeout(() => {
+        timer = null
+      }, delay);
+    } else {
+      timer = setTimeout(() => {
+        fn.apply(this, args)
+      }, delay);
+    }
+    return res;
+  }
+  myDebounce.cancel=(()=>{
+    clearTimeout(timer)
+  })
+
+  return myDebounce
+}
+```
+
+
+
+
+
+节流函数:在一定时间段内执行一次(类似于水龙头每隔500ms滴一滴水)
+
+```javascript
+ // 节流函数1（时间戳）
+function thorttle(fn, interval = 500) {
+  preTime = Date.now()
+  return function (...args) {
+    nowTime = Date.now()
+    if (nowTime - preTime >= interval) {
+      fn.apply(this, args)
+      preTime = Date.now()
+    }
+    // timer = setTimeout(() => {
+    //     fn.apply(this, args)
+    // }, interval);
+  }
+
+}
+// 节流函数2（定时器）
+function thorttle2(fn, interval = 500) {
+  let timer = null;
+  return function (...args) {
+    if (!timer) {
+      timer = setTimeout(() => {
+        fn.apply(this, args);
+        clearTimeout(timer);
+        timer = null
+      }, interval);
+    }
+  }
+}
+```
+
