--- a/source/_posts/函数的防抖与截流.md
+++ b/source/_posts/函数的防抖与截流.md
@@ -1,6 +1,6 @@
 ---
 title: 函数的防抖与截流
-thumbnail: http://rr2u16sq3.bkt.clouddn.com/20ab6cb5cef84475ad912705b3d5da51.webp
+thumbnail: https://jiangwen-blog.oss-cn-fuzhou.aliyuncs.com/images/20ab6cb5cef84475ad912705b3d5da51.webp
 date: 2023-03-06 22:48:46
 tags: [Javascript]
 categories: [前端]
