--- a/source/_posts/满纸荒唐言.md
+++ b/source/_posts/满纸荒唐言.md
@@ -3,7 +3,7 @@ title: 满纸荒唐言
 tags: [阅读]
 categories: 生活
 date: 2023-03-06 18:50:24
-thumbnail: 'http://rr2u16sq3.bkt.clouddn.com/dd3e880811ebb6e017c2d2eca2.webp'
+thumbnail: 'https://jiangwen-blog.oss-cn-fuzhou.aliyuncs.com/images/2387ae258a104923ad649dbb740b4f8b.webp'
 ---
     
 <i id="typed-text"></i>
