版本升级；文章整理

--- a/source/_posts/生活随记/满纸荒唐言.md
+++ b/source/_posts/生活随记/满纸荒唐言.md
@@ -1,23 +1,13 @@
 ---
 title: 满纸荒唐言
 tags: [阅读]
-categories: 生活
+categories: 随记
+sticky: 998
 date: 2023-03-06 18:50:24
 thumbnail: 'https://jiangwen-blog.oss-cn-fuzhou.aliyuncs.com/images/2387ae258a104923ad649dbb740b4f8b.webp'
 ---
-    
-<i id="typed-text"></i>
-<script src="https://cdn.jsdelivr.net/npm/typed.js/lib/typed.min.js"></script>
-<script>
-  var typed = new Typed("#typed-text", {
-  strings: ["用行动去思考，去改变、去创造。","Take action to think, to change, to create."],
-  startDelay: 200,
-  backDelay: 2000,
-  typeSpeed: 100,
-  loop: true,
-  backSpeed: 20
-  })
-</script>
+<!-- B站视频卡片 -->
+{% bilicard BV1do4y1Y7kC %}
 
 
 ## 人文社科类
