--- a/source/_posts/Javascript/模块化开发.md
+++ b/source/_posts/Javascript/模块化开发.md
@@ -3,7 +3,7 @@ title: 模块化开发
 excerpt: false
 thumbnail: 'https://jiangwen-blog.oss-cn-fuzhou.aliyuncs.com/images/dd3e880811ebb6e017c2d2eca2.webp'
 tags: [ES6]
-categories: [Javascript]
+categories: Javascript
 date: 2020-02-28 12:15:00
 ---
 
