开启音乐播放器配置；编辑文章

--- a/source/_posts/生活随记/满纸荒唐言.md
+++ b/source/_posts/生活随记/满纸荒唐言.md
@@ -7,10 +7,11 @@ date: 2023-03-06 18:50:24
 thumbnail: 'https://jiangwen-blog.oss-cn-fuzhou.aliyuncs.com/images/2387ae258a104923ad649dbb740b4f8b.webp'
 ---
 <!-- B站视频卡片 -->
-{% bilicard BV1do4y1Y7kC %}
+<!-- {% bilicard BV1do4y1Y7kC %} -->
 
-
-## 人文社科类
+## 阅读书单
+{% tabs recommend %}
+<!-- tab 人文社科类 -->
 - [x] 《1984》
 - [x] 《乌合之众》
 - [x] 《浪潮之巅》
@@ -19,6 +20,8 @@ thumbnail: 'https://jiangwen-blog.oss-cn-fuzhou.aliyuncs.com/images/2387ae258a10
 - [x] 《万历十五年》
 - [x] 《围城》
 - [x] 《明朝那些事》
+- [x] 《活着》
+- [x] 《兄弟》
 - [ ] 《中国古代文化常识》
 - [ ] 《枪炮、病菌与钢铁》
 - [ ] 《月亮与六便士》
@@ -29,43 +32,69 @@ thumbnail: 'https://jiangwen-blog.oss-cn-fuzhou.aliyuncs.com/images/2387ae258a10
 - [ ] 《学会提问》
 - [ ] 《通往奴役之路》
 - [ ] 《动物庄园》
+<!-- endtab -->
 
-
-## 技术类
+<!-- tab 技术类 -->
 - [ ] 《鸟哥的Linux私房菜》
 - [ ] 《JavaScript高级程序设计》
 - [ ] 《你不知道的JavaScript》
 - [ ] 《JavaScript高级程序设计》
+<!-- endtab -->
+{% endtabs %}
+
+
+
+
+
 
 
 ## 阅读摘录
-{% blockquote David Levithan, Wide Awake %}
-Do not just seek happiness for yourself. Seek happiness for all. Through kindness. Through mercy.
-{% endblockquote %}
-{% blockquote 乔治·奥威尔, 一九八四 %}
-战争即和平 自由即奴役 无知即力量。
-{% endblockquote %}
- 谁控制了过去，谁就控制了未来；谁控制了现在，谁就控制了过去。——乔治·奥威尔 《一九八四》
-与恶龙缠斗过久,自身亦成为恶龙；当你凝视深渊,深渊将回以凝视。——尼采 《善与恶的超越》
- 卑鄙是卑鄙者的通行证，高尚是高尚者的墓志铭。——北岛 《回答》
-看吧，在那镀金的天空中，飘满了死者弯曲的倒影。——北岛 《回答》
- 税收这种技术，就是拔最多的鹅毛，听最少的鹅叫 	——哥尔柏
- 多数人在25岁时就死了，一直到75岁才埋葬 	——本杰明 · 富兰克林
- 税收和死亡是人生无法避免的两件大事 	——本杰明 · 富兰克林
-万物皆有裂痕，那是光照进来的地方	——莱昂纳德·科恩《颂歌》
- 如果我不曾见到太阳，我本可以忍受黑暗。
- 可如今，太阳把我的寂寞照的更荒凉。	——艾米莉·狄金森
- 我们用两年时间学会说话，却要用一辈子学会闭嘴。——海明威
- 张牙舞爪的人，往往是脆弱的。因为真正强大的人，
- 是自信的，自信就会温和，温和就会坚定。	——当年明月《明朝那些事儿》
- 楼下一个男人病得要死，那间壁的一家唱着留声机；对面是弄孩子。楼上有两人狂笑；还有打牌声。河中的船上有女人哭着她死去的母亲。人类的悲欢并不相通，我只觉得他们吵闹。——鲁迅 《而已集·小杂感》
- 人的一切痛苦，本质上都是对自己的无能的愤怒。	——王小波
- 我要求你读书用功，不是因为我要你跟别人比成就，而是因为，我希望你将来会拥有选择的权利，选择有意义、有时间的工作，而不是被迫谋生。——龙应台《亲爱的安德烈》
- 每一个不曾起舞的日子，都是对生命的辜负。	——尼采
- 年长者最大的修养，就是控制住批评年轻人的欲望。——毛姆
- 在爱情的事上如果你考虑起自尊心来，那只能有一个原因：实际上你还是最爱自己。——毛姆 《月亮与六便士》
- 自由不是让你想做什么就做什么，自由是教你不想做什么，就可以不做什么。——康德
- 哪里有人会喜欢孤独，不过是不喜欢失望。	——村上春树
- 雪崩时没有一片雪花会有负罪感。    ——伏尔泰
- 井蛙不可以语于海者，拘于虚也；
- 夏虫不可以语于冰者，笃于时也  ——《庄子.秋水》
+{% notel red fa-book 《1984》[英]乔治·奥威尔 %}
+- 战争即和平 自由即奴役 无知即力量。
+- 谁控制了过去，谁就控制了未来；谁控制了现在，谁就控制了过去。
+{% endnotel %}
+
+{% notel red fa-book 《善与恶的超越》[德]尼采 %}
+- 与恶龙缠斗过久,自身亦成为恶龙；当你凝视深渊,深渊将回以凝视。
+- 每一个不曾起舞的日子，都是对生命的辜负。
+{% endnotel %}
+
+{% notel red fa-book 《回答》[中]北岛 %}
+- 卑鄙是卑鄙者的通行证，高尚是高尚者的墓志铭。
+{% endnotel %}
+
+{% notel red fa-book 《颂歌》[加]莱昂纳德·科恩 %}
+- 万物皆有裂痕，那是光照进来的地方
+{% endnotel %}
+
+{% notel red fa-book 《如果我不曾见过太阳》[美]艾米莉·狄金森 %}
+- 如果我不曾见到太阳，我本可以忍受黑暗。可如今，太阳把我的寂寞照的更荒凉。
+{% endnotel %}
+
+{% notel red fa-book 《亲爱的安德烈》[中]龙应台 %}
+- 我要求你读书用功，不是因为我要你跟别人比成就，而是因为，我希望你将来会拥有选择的权利，选择有意义、有时间的工作，而不是被迫谋生。
+{% endnotel %}
+
+{% notel red fa-book 《庄子.秋水》[古]庄子 %}
+- 井蛙不可以语于海者，拘于虚也；夏虫不可以语于冰者，笃于时也
+{% endnotel %}
+
+{% notel red fa-book 《月亮与六便士》[英]毛姆 %}
+- 在爱情的事上如果你考虑起自尊心来，那只能有一个原因：实际上你还是最爱自己。
+{% endnotel %}
+
+{% notel red fa-book 《月亮与六便士》[英]毛姆 %}
+- 在爱情的事上如果你考虑起自尊心来，那只能有一个原因：实际上你还是最爱自己。
+{% endnotel %}
+
+{% notel red fa-book [美]海明威 %}
+- 我们用两年时间学会说话，却要用一辈子学会闭嘴。
+{% endnotel %}
+
+{% notel red fa-book 《而已集·小杂感》[中]鲁迅 %}
+- 楼下一个男人病得要死，那间壁的一家唱着留声机；对面是弄孩子。楼上有两人狂笑；还有打牌声。河中的船上有女人哭着她死去的母亲。人类的悲欢并不相通，我只觉得他们吵闹。
+{% endnotel %}
+
+{% notel red fa-book [中]王小波 %}
+- 人的一切痛苦，本质上都是对自己的无能的愤怒。
+{% endnotel %}
