主题色及文章封面图片调整

--- a/source/_posts/Javascript/对象的继承.md
+++ b/source/_posts/Javascript/对象的继承.md
@@ -3,7 +3,7 @@ title: 对象的继承
 tags: [Javascript]
 categories: Javascript
 date: 2023-03-12 21:59:26
-thumbnail: https://jiangwen-blog.oss-cn-fuzhou.aliyuncs.com/images/20ab6cb5cef84475ad912705b3d5da51.webp
+thumbnail: https://jiangwen-blog.oss-cn-fuzhou.aliyuncs.com/images/cover/11.webp
 ---
 
 > 在Javascript中实现继承主要是依靠原型链来实现的;其基本思想是通过原型实现一个引用类型继承另一个引用类型的属性和方法。
