--- a/source/_posts/Javascript/防抖&节流.md
+++ b/source/_posts/Javascript/防抖&节流.md
@@ -1,7 +1,7 @@
 ---
 title: 防抖&节流函数
 excerpt: false
-thumbnail: 'https://jiangwen-blog.oss-cn-fuzhou.aliyuncs.com/images/dd3e880811ebb6e017c2d2eca2.webp'
+thumbnail: 'https://jiangwen-blog.oss-cn-fuzhou.aliyuncs.com/images/cover/4.webp'
 tags: [性能]
 categories: Javascript
 date: 2020-09-18 09:15:00
