--- a/source/_posts/开发学习/跨域问题.md
+++ b/source/_posts/开发学习/跨域问题.md
@@ -4,7 +4,7 @@ excerpt: false
 tags: [http]
 categories: 浏览器
 date: 2021-01-01 18:00:00
-thumbnail: 'https://jiangwen-blog.oss-cn-fuzhou.aliyuncs.com/images/dd3e880811ebb6e017c2d2eca2.webp'
+thumbnail: 'https://jiangwen-blog.oss-cn-fuzhou.aliyuncs.com/images/cover/4.webp'
 ---
 
 ## 1. 什么是跨域
