--- a/source/_posts/生活随记/满纸荒唐言.md
+++ b/source/_posts/生活随记/满纸荒唐言.md
@@ -4,7 +4,7 @@ tags: [阅读]
 categories: 随记
 sticky: 998
 date: 2023-03-06 18:50:24
-thumbnail: 'https://jiangwen-blog.oss-cn-fuzhou.aliyuncs.com/images/2387ae258a104923ad649dbb740b4f8b.webp'
+thumbnail: 'https://jiangwen-blog.oss-cn-fuzhou.aliyuncs.com/images/cover/14.webp'
 ---
 ## 阅读书单
 {% tabs recommend %}
