--- a/source/_posts/CSS/等高布局.md
+++ b/source/_posts/CSS/等高布局.md
@@ -1,7 +1,7 @@
 ---
 title: 等高布局的几种实现方式
 excerpt: false
-thumbnail: 'https://jiangwen-blog.oss-cn-fuzhou.aliyuncs.com/images/dd3e880811ebb6e017c2d2eca2.webp'
+thumbnail: 'https://jiangwen-blog.oss-cn-fuzhou.aliyuncs.com/images/cover/9.webp'
 tags: [布局, H5]
 categories: [CSS]
 date: 2021-11-18 11:25:00
