--- a/source/_posts/Javascript/常用正则.md
+++ b/source/_posts/Javascript/常用正则.md
@@ -2,7 +2,7 @@
 title: 常用正则
 tags: [正则表达式]
 categories: Javascript
-thumbnail: https://jiangwen-blog.oss-cn-fuzhou.aliyuncs.com/images/20ab6cb5cef84475ad912705b3d5da51.webp
+thumbnail: https://jiangwen-blog.oss-cn-fuzhou.aliyuncs.com/images/cover/11.webp
 date: 2023-03-12 21:59:26
 ---
 
