--- a/source/_posts/Javascript/模块化开发.md
+++ b/source/_posts/Javascript/模块化开发.md
@@ -1,7 +1,7 @@
 ---
 title: 模块化开发
 excerpt: false
-thumbnail: 'https://jiangwen-blog.oss-cn-fuzhou.aliyuncs.com/images/dd3e880811ebb6e017c2d2eca2.webp'
+thumbnail: 'https://jiangwen-blog.oss-cn-fuzhou.aliyuncs.com/images/cover/4.webp'
 tags: [ES6]
 categories: Javascript
 date: 2020-02-28 12:15:00
