--- a/source/_posts/Vue/数据更新但视图不刷新的解决方法.md
+++ b/source/_posts/Vue/数据更新但视图不刷新的解决方法.md
@@ -1,7 +1,7 @@
 ---
 title: 数据更新但视图不刷新的解决方法
 excerpt: false
-thumbnail: 'https://jiangwen-blog.oss-cn-fuzhou.aliyuncs.com/images/dd3e880811ebb6e017c2d2eca2.webp'
+thumbnail: 'https://jiangwen-blog.oss-cn-fuzhou.aliyuncs.com/images/cover/4.webp'
 tags: [Vue]
 categories: [Vue]
 date: 2020-02-28 12:15:00
