--- a/source/_posts/开发学习/10万级数据渲染优化方案.md
+++ b/source/_posts/开发学习/10万级数据渲染优化方案.md
@@ -1,7 +1,7 @@
 ---
 title: 10万级数据渲染优化方案
 excerpt: false
-thumbnail: 'https://jiangwen-blog.oss-cn-fuzhou.aliyuncs.com/images/dd3e880811ebb6e017c2d2eca2.webp'
+thumbnail: 'https://jiangwen-blog.oss-cn-fuzhou.aliyuncs.com/images/cover/4.webp'
 tags: [移动端, 兼容]
 categories: [CSS]
 date: 2021-11-18 11:25:00
