--- a/source/_posts/开发学习/前端学习路线.md
+++ b/source/_posts/开发学习/前端学习路线.md
@@ -4,7 +4,7 @@ excerpt: false
 tags: [学习总结]
 categories: 前端
 date: 2021-01-01 18:00:00
-thumbnail: 'https://jiangwen-blog.oss-cn-fuzhou.aliyuncs.com/images/dd3e880811ebb6e017c2d2eca2.webp'
+thumbnail: 'https://jiangwen-blog.oss-cn-fuzhou.aliyuncs.com/images/cover/15.webp'
 ---
 
 
