--- a/source/_posts/开发学习/后台管理系统的权限控制与管理.md
+++ b/source/_posts/开发学习/后台管理系统的权限控制与管理.md
@@ -1,7 +1,7 @@
 ---
 title: 后台管理系统的权限控制与管理
 excerpt: false
-thumbnail: 'https://jiangwen-blog.oss-cn-fuzhou.aliyuncs.com/images/dd3e880811ebb6e017c2d2eca2.webp'
+thumbnail: 'https://jiangwen-blog.oss-cn-fuzhou.aliyuncs.com/images/cover/4.webp'
 tags: [权限控制]
 categories: [开发]
 date: 2021-11-18 11:25:00
