--- a/source/_posts/开发学习/大前端学习资源.md
+++ b/source/_posts/开发学习/大前端学习资源.md
@@ -1,7 +1,7 @@
 ---
 title: 大前端学习资源
 excerpt: false
-thumbnail: 'https://jiangwen-blog.oss-cn-fuzhou.aliyuncs.com/images/dd3e880811ebb6e017c2d2eca2.webp'
+thumbnail: 'https://jiangwen-blog.oss-cn-fuzhou.aliyuncs.com/images/cover/4.webp'
 tags: [资源]
 categories: [开发]
 date: 2020-01-18 14:25:00
